Closed
Bug 1257209
Opened 10 years ago
Closed 10 years ago
Record uptime in crash events/crash telemetry pings
Categories
(Toolkit :: Crash Reporting, defect)
Toolkit
Crash Reporting
Tracking
()
RESOLVED
FIXED
mozilla48
People
(Reporter: benjamin, Assigned: benjamin)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
58 bytes,
text/x-review-board-request
|
gfritzsche
:
review+
ritu
:
approval-mozilla-aurora+
ritu
:
approval-mozilla-beta+
|
Details |
Currently we don't record uptime in crash telemetry pings, which means that we can't distinguish some things like startup and shutdown crashes. Easy to fix and valuable.
| Assignee | ||
Comment 1•10 years ago
|
||
Review commit: https://reviewboard.mozilla.org/r/40565/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/40565/
Attachment #8731415 -
Flags: review?(gfritzsche)
Comment 2•10 years ago
|
||
Comment on attachment 8731415 [details]
MozReview Request: Bug 1257209 - record uptime in crash metadata/pings, r?gfritzsche
https://reviewboard.mozilla.org/r/40565/#review37665
::: toolkit/crashreporter/test/unit/test_event_files.js:52
(Diff revision 1)
> let crash = crashes[0];
> Assert.ok(crash.isOfType(cm.PROCESS_TYPE_MAIN, cm.CRASH_TYPE_CRASH));
> Assert.equal(crash.id + ".dmp", basename, "ID recorded properly");
> Assert.equal(crash.metadata.ShutdownProgress, "event-test");
> Assert.ok("TelemetrySessionId" in crash.metadata);
> + Assert.ok("UptimeTS" in crash.metadata);
We should test for "CrashTime" too.
Attachment #8731415 -
Flags: review?(gfritzsche) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
Comment on attachment 8731415 [details]
MozReview Request: Bug 1257209 - record uptime in crash metadata/pings, r?gfritzsche
Approval Request Comment
[Feature/regressing bug #]: Not a regression, but this is required to properly analyze some issues for the UT-based crash dashboards tracked in bug 1257321
[Describe test coverage new/current, TreeHerder]: Manual and automated tests
[Risks and why]: This is low risk: it adds one new property
[String/UUID change made/needed]: none
Attachment #8731415 -
Flags: approval-mozilla-beta?
Attachment #8731415 -
Flags: approval-mozilla-aurora?
Comment 5•10 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
status-firefox48:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla48
Comment on attachment 8731415 [details]
MozReview Request: Bug 1257209 - record uptime in crash metadata/pings, r?gfritzsche
Improving crash metadata to help make informed decisions re: release quality and severity of issues, Aurora47+, Beta46+
Attachment #8731415 -
Flags: approval-mozilla-beta?
Attachment #8731415 -
Flags: approval-mozilla-beta+
Attachment #8731415 -
Flags: approval-mozilla-aurora?
Attachment #8731415 -
Flags: approval-mozilla-aurora+
status-firefox46:
--- → affected
status-firefox47:
--- → affected
Comment 7•10 years ago
|
||
has problems to apply to aurora:
grafting 335152:428290912512 "Bug 1257209 - record uptime in crash metadata/pings, r=gfritzsche"
merging toolkit/crashreporter/nsExceptionHandler.cpp
merging toolkit/crashreporter/test/unit/test_event_files.js
warning: conflicts while merging toolkit/crashreporter/test/unit/test_event_files.js! (edit, then use 'hg resolve --mark')
abort: unresolved conflicts, can't continue
(use hg resolve and hg graft --continue)
Flags: needinfo?(benjamin)
| Assignee | ||
Comment 8•10 years ago
|
||
Bug 1187270 which is pending approval will solve the conflict.
Flags: needinfo?(benjamin)
Comment 9•10 years ago
|
||
| bugherder uplift | ||
I'm hitting conflicts uplifting this to beta, likely because bug 1240160 isn't on beta.
Flags: needinfo?(benjamin)
Comment 11•10 years ago
|
||
in risk of missing beta 5
Comment 12•10 years ago
|
||
I asked in bug 1240160 if we should uplift. Benjamin, this is probably going to miss beta 5 but we could get it in for beta 6. If we need to hold back beta 5 for an hour or two though to do these uplifts, let me know.
Comment 13•10 years ago
|
||
Tracking so we keep an eye on this still needing to land.
tracking-firefox46:
--- → +
| Assignee | ||
Comment 14•10 years ago
|
||
Flags: needinfo?(benjamin)
You need to log in
before you can comment on or make changes to this bug.
Description
•