Bug 1257209 - record uptime in crash metadata/pings, r=gfritzsche

MozReview-Commit-ID: 8MVRwALXvW5